- make JSON viewer scrollable; fix some layout issues with changelog

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -2,12 +2,17 @@ html,
 body {
    margin:0;
    padding:0;
-   height:100%;
    width:100%;
+}
+
+html {
+  height: 100vh;
 }
 
 body {
   position: relative;
+  background:#f5f6f7;
+  height:100%;
   min-height: 100%;
   max-height: 100%;
 }
@@ -18,13 +23,11 @@ body {
 }
 
 #header {
-   background:#f5f6f7;
    padding:10px;
 }
 
 #content {
    padding:10px;
-   background:#f5f6f7;
 }
 
 #footer {
